--- a/documentation/latex/classcsv__reader.tex
+++ b/documentation/latex/classcsv__reader.tex
@@ -171,5 +171,5 @@ Reads a said csv file from the toy graphs folder complexity\+: O(n\texorpdfstrin
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{csv__reader_8h}{csv\+\_\+reader.\+h}}\item 
-\mbox{\hyperlink{csv__reader_8cpp}{csv\+\_\+reader.\+cpp}}\end{DoxyCompactItemize}
+source/\mbox{\hyperlink{csv__reader_8h}{csv\+\_\+reader.\+h}}\item 
+source/\mbox{\hyperlink{csv__reader_8cpp}{csv\+\_\+reader.\+cpp}}\end{DoxyCompactItemize}
