--- a/documentation/latex/classmenu.tex
+++ b/documentation/latex/classmenu.tex
@@ -281,5 +281,5 @@ Gets a solution to the tsp problem even in graphs that are not guaranteed to be 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{menu_8h}{menu.\+h}}\item 
-\mbox{\hyperlink{menu_8cpp}{menu.\+cpp}}\end{DoxyCompactItemize}
+source/\mbox{\hyperlink{menu_8h}{menu.\+h}}\item 
+source/\mbox{\hyperlink{menu_8cpp}{menu.\+cpp}}\end{DoxyCompactItemize}
