--- a/documentation/latex/classnode.tex
+++ b/documentation/latex/classnode.tex
@@ -173,5 +173,5 @@ Sets the node as visited or not visited complexity\+: O(1)
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{node_8h}{node.\+h}}\item 
-\mbox{\hyperlink{node_8cpp}{node.\+cpp}}\end{DoxyCompactItemize}
+source/\mbox{\hyperlink{node_8h}{node.\+h}}\item 
+source/\mbox{\hyperlink{node_8cpp}{node.\+cpp}}\end{DoxyCompactItemize}
