--- a/documentation/latex/csv__reader_8cpp.tex
+++ b/documentation/latex/csv__reader_8cpp.tex
@@ -1,3 +1,3 @@
-\doxysection{csv\+\_\+reader.\+cpp File Reference}
-\hypertarget{csv__reader_8cpp}{}\label{csv__reader_8cpp}\index{csv\_reader.cpp@{csv\_reader.cpp}}
+\doxysection{source/csv\+\_\+reader.cpp File Reference}
+\hypertarget{csv__reader_8cpp}{}\label{csv__reader_8cpp}\index{source/csv\_reader.cpp@{source/csv\_reader.cpp}}
 {\ttfamily \#include "{}csv\+\_\+reader.\+h"{}}\newline
