--- a/documentation/latex/csv__reader_8h.tex
+++ b/documentation/latex/csv__reader_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{csv\+\_\+reader.\+h File Reference}
-\hypertarget{csv__reader_8h}{}\label{csv__reader_8h}\index{csv\_reader.h@{csv\_reader.h}}
+\doxysection{source/csv\+\_\+reader.h File Reference}
+\hypertarget{csv__reader_8h}{}\label{csv__reader_8h}\index{source/csv\_reader.h@{source/csv\_reader.h}}
 {\ttfamily \#include $<$string$>$}\newline
 {\ttfamily \#include $<$vector$>$}\newline
 {\ttfamily \#include $<$unordered\+\_\+map$>$}\newline
