--- a/documentation/latex/csv__reader_8h_source.tex
+++ b/documentation/latex/csv__reader_8h_source.tex
@@ -1,5 +1,6 @@
 \doxysection{csv\+\_\+reader.\+h}
-\hypertarget{csv__reader_8h_source}{}\label{csv__reader_8h_source}\mbox{\hyperlink{csv__reader_8h}{Go to the documentation of this file.}}
+\hypertarget{csv__reader_8h_source}{}\label{csv__reader_8h_source}\index{source/csv\_reader.h@{source/csv\_reader.h}}
+\mbox{\hyperlink{csv__reader_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ PROJETO\_DA\_2\_CSV\_READER\_H}}
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ PROJETO\_DA\_2\_CSV\_READER\_H}}
