--- a/documentation/latex/files.tex
+++ b/documentation/latex/files.tex
@@ -1,11 +1,11 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{csv__reader_8cpp}{csv\+\_\+reader.\+cpp}} }{\pageref{csv__reader_8cpp}}{}
-\item\contentsline{section}{\mbox{\hyperlink{csv__reader_8h}{csv\+\_\+reader.\+h}} }{\pageref{csv__reader_8h}}{}
-\item\contentsline{section}{\mbox{\hyperlink{menu_8cpp}{menu.\+cpp}} }{\pageref{menu_8cpp}}{}
-\item\contentsline{section}{\mbox{\hyperlink{menu_8h}{menu.\+h}} }{\pageref{menu_8h}}{}
-\item\contentsline{section}{\mbox{\hyperlink{node_8cpp}{node.\+cpp}} }{\pageref{node_8cpp}}{}
-\item\contentsline{section}{\mbox{\hyperlink{node_8h}{node.\+h}} }{\pageref{node_8h}}{}
-\item\contentsline{section}{\mbox{\hyperlink{request_8cpp}{request.\+cpp}} }{\pageref{request_8cpp}}{}
-\item\contentsline{section}{\mbox{\hyperlink{request_8h}{request.\+h}} }{\pageref{request_8h}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{csv__reader_8cpp}{csv\+\_\+reader.\+cpp}} }{\pageref{csv__reader_8cpp}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{csv__reader_8h}{csv\+\_\+reader.\+h}} }{\pageref{csv__reader_8h}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{menu_8cpp}{menu.\+cpp}} }{\pageref{menu_8cpp}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{menu_8h}{menu.\+h}} }{\pageref{menu_8h}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{node_8cpp}{node.\+cpp}} }{\pageref{node_8cpp}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{node_8h}{node.\+h}} }{\pageref{node_8h}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{request_8cpp}{request.\+cpp}} }{\pageref{request_8cpp}}{}
+\item\contentsline{section}{source/\mbox{\hyperlink{request_8h}{request.\+h}} }{\pageref{request_8h}}{}
 \end{DoxyCompactList}
