--- a/documentation/latex/menu_8h.tex
+++ b/documentation/latex/menu_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{menu.\+h File Reference}
-\hypertarget{menu_8h}{}\label{menu_8h}\index{menu.h@{menu.h}}
+\doxysection{source/menu.h File Reference}
+\hypertarget{menu_8h}{}\label{menu_8h}\index{source/menu.h@{source/menu.h}}
 {\ttfamily \#include "{}request.\+h"{}}\newline
 {\ttfamily \#include $<$string$>$}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
