--- a/documentation/latex/node_8cpp.tex
+++ b/documentation/latex/node_8cpp.tex
@@ -1,3 +1,3 @@
-\doxysection{node.\+cpp File Reference}
-\hypertarget{node_8cpp}{}\label{node_8cpp}\index{node.cpp@{node.cpp}}
+\doxysection{source/node.cpp File Reference}
+\hypertarget{node_8cpp}{}\label{node_8cpp}\index{source/node.cpp@{source/node.cpp}}
 {\ttfamily \#include "{}node.\+h"{}}\newline
