--- a/documentation/latex/node_8h.tex
+++ b/documentation/latex/node_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{node.\+h File Reference}
-\hypertarget{node_8h}{}\label{node_8h}\index{node.h@{node.h}}
+\doxysection{source/node.h File Reference}
+\hypertarget{node_8h}{}\label{node_8h}\index{source/node.h@{source/node.h}}
 \doxysubsubsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
