--- a/documentation/latex/node_8h_source.tex
+++ b/documentation/latex/node_8h_source.tex
@@ -1,5 +1,6 @@
 \doxysection{node.\+h}
-\hypertarget{node_8h_source}{}\label{node_8h_source}\mbox{\hyperlink{node_8h}{Go to the documentation of this file.}}
+\hypertarget{node_8h_source}{}\label{node_8h_source}\index{source/node.h@{source/node.h}}
+\mbox{\hyperlink{node_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ PROJETO\_DA\_2\_NODE\_H}}
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ PROJETO\_DA\_2\_NODE\_H}}
