--- a/documentation/latex/request_8h.tex
+++ b/documentation/latex/request_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{request.\+h File Reference}
-\hypertarget{request_8h}{}\label{request_8h}\index{request.h@{request.h}}
+\doxysection{source/request.h File Reference}
+\hypertarget{request_8h}{}\label{request_8h}\index{source/request.h@{source/request.h}}
 {\ttfamily \#include "{}csv\+\_\+reader.\+h"{}}\newline
 {\ttfamily \#include "{}node.\+h"{}}\newline
 {\ttfamily \#include $<$vector$>$}\newline
