--- a/documentation/latex/request_8h_source.tex
+++ b/documentation/latex/request_8h_source.tex
@@ -1,5 +1,6 @@
 \doxysection{request.\+h}
-\hypertarget{request_8h_source}{}\label{request_8h_source}\mbox{\hyperlink{request_8h}{Go to the documentation of this file.}}
+\hypertarget{request_8h_source}{}\label{request_8h_source}\index{source/request.h@{source/request.h}}
+\mbox{\hyperlink{request_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ PROJETO\_DA\_2\_REQUEST\_H}}
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ PROJETO\_DA\_2\_REQUEST\_H}}
