--- a/documentation/latex/structrequest_1_1compare.tex
+++ b/documentation/latex/structrequest_1_1compare.tex
@@ -18,4 +18,4 @@ bool \mbox{\hyperlink{structrequest_1_1compare_a974b40a5fa0253940fb001ccc1a0d443
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{request_8h}{request.\+h}}\end{DoxyCompactItemize}
+source/\mbox{\hyperlink{request_8h}{request.\+h}}\end{DoxyCompactItemize}
