--- a/documentation/latex/menu_8cpp.tex
+++ b/documentation/latex/menu_8cpp.tex
@@ -1,3 +1,3 @@
-\doxysection{menu.\+cpp File Reference}
-\hypertarget{menu_8cpp}{}\label{menu_8cpp}\index{menu.cpp@{menu.cpp}}
+\doxysection{source/menu.cpp File Reference}
+\hypertarget{menu_8cpp}{}\label{menu_8cpp}\index{source/menu.cpp@{source/menu.cpp}}
 {\ttfamily \#include "{}menu.\+h"{}}\newline
