--- a/documentation/latex/menu_8h_source.tex
+++ b/documentation/latex/menu_8h_source.tex
@@ -1,5 +1,6 @@
 \doxysection{menu.\+h}
-\hypertarget{menu_8h_source}{}\label{menu_8h_source}\mbox{\hyperlink{menu_8h}{Go to the documentation of this file.}}
+\hypertarget{menu_8h_source}{}\label{menu_8h_source}\index{source/menu.h@{source/menu.h}}
+\mbox{\hyperlink{menu_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ PROJETO\_DA\_2\_MENU\_H}}
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ PROJETO\_DA\_2\_MENU\_H}}
