--- a/documentation/latex/request_8cpp.tex
+++ b/documentation/latex/request_8cpp.tex
@@ -1,3 +1,3 @@
-\doxysection{request.\+cpp File Reference}
-\hypertarget{request_8cpp}{}\label{request_8cpp}\index{request.cpp@{request.cpp}}
+\doxysection{source/request.cpp File Reference}
+\hypertarget{request_8cpp}{}\label{request_8cpp}\index{source/request.cpp@{source/request.cpp}}
 {\ttfamily \#include "{}request.\+h"{}}\newline
